# kommemeorate

./: .gitignore  Cargo.toml  REUSE.toml  build.rs  cliff.toml  deny.toml  diesel.toml  flake.nix  rust-toolchain.toml  rustfmt.toml  schema.patch
.github/workflows/: ci.yml
migrations/2025-06-16-022444_create_memes/: down.sql  up.sql
migrations/2025-06-16-023704_add_filename/: down.sql  up.sql
nix/: module.nix
src/: cli.rs  config.rs  consumer.rs  logging.rs  main.rs  matrix.rs  service.rs  telegram.rs
src/consumer/: db.rs
src/consumer/db/: models.rs  schema.rs
