# © 2025 Maximilian Marx
# SPDX-FileContributor: Maximilian Marx
#
# SPDX-License-Identifier: EUPL-1.2

[package]
name = "kommemeorate"
description = "collects and structures your memes"
homepage = "https://github.com/Die-KoMa/kommemeorate"
version = "0.1.0"
edition = "2024"
license = "EUPL-1.2"
authors = ["Maximilian Marx <mmarx@wh2.tu-dresden.de>"]

[dependencies]
anyhow = "1.0.98"
chrono = "0.4.41"
clap = { version = "4.5.38", features = ["derive"] }
config = { version = "0.15.11", features = ["toml"], default-features = false }
env_logger = "0.11.8"
grammers-client = { git = "https://github.com/Lonami/grammers", features = [
  "parse_invite_link",
] }
itertools = "0.14.0"
log = "0.4.27"
sd-notify = "0.4.5"
serde = { version = "1.0.219", features = ["derive"] }
test-log = "0.2.17"
tokio = { version = "1.45.1", features = [
  "macros",
  "rt",
  "rt-multi-thread",
  "signal",
  "sync",
] }

[build-dependencies]
clap = { version = "4.5.38", features = ["derive"] }
clap_complete = "4.5.50"
clap_mangen = "0.2.26"
